<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mad Minds Matter Portal</string>
    <string name="action_settings">Settings</string>
    <string name="des">Part of the recovery box line up bringing you combined self help and support resources for consumers, carers and clinicians to better aid and support in recovery</string>
    <string name="title_activity_sub_cat">Subcategories</string>
    <string name="main_empty">No post found yet. Please add some, by clicking Floating button</string>
    <string name="insert_suggestion">Insert here</string>
    <string name="add">Add</string>
    <string name="add_categories">Add Categories</string>
    <string name="add_subcategory">Add Subcategory</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="title_activity_insert">Post Data</string>
    <string name="post">Post</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_type_here">Enter type here</string>
    <string name="enter_link_here_if_any">Enter link here if Any</string>
    <string name="pick_image">Pick Image</string>
    <string name="title_activity_cat">Categories</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>

    <string name="action_search">Search</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="email_level">Email</string>
    <string name="pass_level">Password</string>
    <string name="app_icon">M</string>
    <string name="title_activity_list">@string/app_name</string>
    <string name="enter_title_here">Enter title here</string>
    <string name="enter_description_here">Enter description here</string>
    <string name="select_type">Select Type</string>
    <string name="enter_the_link_here">Enter the link here</string>
    <string name="pick_an_image">Pick an Image</string>
    <string name="edit">Edit</string>
    <string name="title_activity_edit">Edit</string>
    <string name="title_activity_details">Details</string>
    <string name="update">Update</string>
    <string name="action_delete">Delete</string>
    <string name="no_category_found">No category found</string>
    <string name="no_category_found_sub">No subcategory found</string>
    <string name="speak_voice">Speak now</string>
</resources>
